# libbase

./: .gitignore  CHANGELOG.md  README.md  lefthook.yml  pyproject.toml  requirements.txt
.agent/: config.md  instructions.md
.agent/templates/: task.md
.agent/workflows/: bump-version.md
.github/workflows/: backlog_sync.yml  cd.yml  ci.yml  release.yml
docs/: MAINTENANCE.md  README.md  backlog.md  constitution.md  milestones.md  requirements.md  sdd.md  specifications.md
scripts/: bump_version.py  sync_backlog.py
src/libbase/controllers/: generic_controller.py
src/libbase/domain/: base.py
src/libbase/infrastructure/: interface.py  json_repository.py  memory_repository.py  sql_repository.py
src/libbase/services/: generic_service.py
tests/: test_generic_controller.py  test_generic_service.py  test_json_repository.py  test_memory_repository.py  test_repository_interface.py  test_sql_repository.py
