[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libbase"
version = "0.1.0"
description = "Generic behavioral and architectural base library for enterprise applications."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Paulo Junior", email = "pauulajunior@gmail.com" }]
dependencies = ["sqlalchemy>=2.0.0"]

[project.urls]
Homepage = "https://github.com/The-Band-Solution/libbase"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "isort",
    "build",
    "twine",
    "lefthook",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=libbase --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.hatch.build.targets.wheel]
packages = ["src/libbase"]
